fix: horizontal scroll

--- a/pages/index.css
+++ b/pages/index.css
@@ -191,7 +191,7 @@ p {
   align-items: center;
 }
 
-.individual-shoots__image {
+.individual-shoots__image_size_big {
   width: 100%;
 }
 
